--- a/mongo-playground/mongo.config
+++ b/mongo-playground/mongo.config
@@ -1,12 +1,9 @@
 # mongo config file
-# usage: "mongodb --config mongo.config"
+# usage: "mongod --config mongo.config" OR "mongod -f mongo.config"
 # this is in YAML file format (spaces, not tabs!)
 
 ##store data here
-dbpath=D:\mongodb\data
+dbpath=./mongodb/data
 
 ##all output go here
-logpath=D:\mongodb\log\mongo.log
-
-##log read and write operations
-diaglog=3
+logpath=./mongodb/log/mongo.log
