--- a/mongo-playground/package.json
+++ b/mongo-playground/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "mongodb": "^2.2.29",
     "monk": "^6.0.1"
   }
