--- a/mongo-playground/package.json
+++ b/mongo-playground/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app-baremongo.js",
+    "start": "node app-monk.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
